# my-website

./: .gitignore  LICENSE  README.md  buildWasm.sh  components.json  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: deploy.yml
public/: .gitignore
rust-wasm/: .gitignore  Cargo.toml  README.md
rust-wasm/src/: framebuffer.rs  lib.rs  random.rs  turing.rs  utils.rs
rust-wasm/src/genetic/: ga.rs  mod.rs  operators.rs  problem.rs  problem_onemax.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/toy/genetic/: geneticAlgorithmHandler.ts  page.tsx
src/app/toy/gerador-horario/: horario-genetic.ts  horario-pencilmark.ts  horario-regras.ts  horario-solver-task.worker.ts  horario-solver.ts  page.tsx
src/app/toy/mapa-ifro/: page.tsx
src/app/toy/sudoku-minado/: page.tsx  solve-task.worker.ts  solver.worker.ts  sudoku-grid.tsx  sudoku-minado-solver.ts  sudoku.module.css
src/app/toy/turing/: page.tsx  turing.grammar  turing.ts  turingCanvas.tsx  turingEditor.tsx  turingLanguage.ts  turingParser.js  turingParser.terms.js  turingexamples.ts
src/components/: live-title.tsx  multiSelect.tsx  nonSSRWrapper.tsx  reveal-card.tsx
src/components/Canvas/: CanvasController.tsx  MeuCanvas.tsx  TouchManager.ts  ZoomableCanvas.tsx
src/components/ui/: checkbox.tsx  input.tsx  tabs.tsx
src/lib/: bitFlag.ts  pencilmark.ts  useWasm.ts  workerRace.ts
src/lib/genetic/: crossoverOperators.ts  ga.ts  mutationOperators.ts  one.ts  operators.ts  problem.ts  test.ts
src/lib/genetic/examples/: one.ts  sorting.ts  string.ts  (+2 more)
